recitation 6 ( shlav 1) 19/05/2020